[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wxchat-export"
version = "0.1.0"
description = "macOS WeChat chat export CLI for local encrypted databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wxchat-export = "wxchat_export.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
